* New command system which allows HSP to map commands dynamically at runtime
* New command system also finally fully enables "disabledCommands" feature so you can completely disable commands you don't want to use
* Custom event commands (uses new command system)
* Implemented new events "onRegionEnter" and "onRegionExit"

v1.6.3 - Aug 22, 2012
* some performance tuning
* added built-in performance monitoring, tunable via core.warnPerformanceMillis config option
* added Brazilian Portuguese translation (locale pt-br). Thanks Guichaguri!
* changed core.reloadChunkOnTeleport default to false (fixes https://bukkit.atlassian.net/browse/BUKKIT-2275)
* Ticket #131: modeRequiresBed not working

v1.6.2 - Aug 2, 2012
* Ticket #118: error when using spawnWorldRandom strategy
* cleaned up some spurious warning messages related to some missing default config settings
* added "core.bedHomeOverwritesDefault" flag for determining how bed home vs default home (/sethome) interact (default = true)
* fixed spurious "location is different than where HSP sent player" messages
* validated working with Craftbukkit 1.3.1 dev builds

v1.6.1 - Jul 8, 2012
* made strategies no longer case-sensitive in the configuration
* added "nearestHomeOrSpawn" strategy
* added some extra warnings to hopefully detect configuration issues and reduce the number of support tickets
* added Portuguese translation (locale pt) - thanks @Traki08!
* updated German translation (locale de) - thanks @Jobsti2!
* new event "onNamedSpawnCommand" for controlling named spawn behavior
* new strategies "modeNoWater" and "modeYBounds" for controlling safe spawn and random spawn behavior
* improvements to safe teleport to reduce occurance of non-safe teleports, especially noticeable with random strategies
* added "dynmap.layer.homes.include-bed-home" and "include-named-homes" options (default home is always included)