@@ -1,3 +1,3 @@
 #Build Number for ANT. Do not edit!
-#Wed Aug 22 12:00:15 PDT 2012
-build.number=583
+#Fri Aug 24 21:40:38 PDT 2012
+build.number=590
