@@ -9,6 +9,7 @@ v1.7 -
 * New command system also finally fully enables "disabledCommands" feature so you can completely disable commands you don't want to use
 * Custom event commands (uses new command system)
 * Implemented new events "onRegionEnter" and "onRegionExit"
+* added "onNewPlayer" event for new players. If no result is returned, HSP will fall through to "onJoin" which maintains backwards compatibility
 
 v1.6.3 - Aug 22, 2012
 * some performance tuning
